--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -93,6 +93,7 @@ main {
     margin-bottom: 30px;
     font-weight: 700;
     font-size: 35px;
+    text-align: center;
 }
 
 .section-description {
@@ -115,4 +116,32 @@ main {
     color: #474747;
     font-weight: 700;
     font-size: 20px;
+}
+
+/* What I Do styles */
+
+.what-i-do {
+    margin-top: 130px;
+}
+
+.skills-container {
+    display: flex;
+}
+
+.skill {
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+
+.skill-title {
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.skill-description {
+    color: #757575;
 }
