--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -170,12 +170,36 @@ main {
     color: #757575;
 }
 
-.resume-item{
+.resume-item {
     margin-top: 30px;
     margin-bottom: 30px;
 }
 
-.resume-button{
+.resume-button {
     margin-top: 50px;
     text-align: center;
+}
+
+/* contact styles */
+
+.contact {
+    display: flex;
+    gap: 100px;
+    background: #FFF8F3;
+    padding: 130px 200px;
+}
+
+.contact .section-title {
+    text-align: left;
+}
+
+.contact input, textarea{
+    margin-bottom: 24px;
+    border: none;
+    width: 100%;
+    padding: 18px 30px;
+}
+
+.contact a{
+    text-decoration: none;
 }
